--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
         <a href="#" target="_blank">Політика конфіденційності</a>
         <p>© 2022 Дані захищені</p>
       </address>
+      Добро пожаловать на вебинар
     </footer>
   </body>
 </html>
